# promptmetrics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
prompts/public/aime/evaluation/: non_official_evaluation_v1.txt
prompts/public/aime/generation/: non_official_generation_v1.txt
prompts/public/facts/evaluation/: non_official_evaluation_v1.txt
prompts/public/facts/generation/: official_generation_v1.txt
prompts/public/gpqa/evaluation/: non_official_evaluation_v1.txt
prompts/public/gpqa/generation/: official_generation_zeroshot_v1.txt
prompts/public/hle/evaluation/: official_evaluation_v1.txt
prompts/public/hle/generation/: chain_of_thought.txt  official_v1.txt
prompts/public/hle/judging/: judge_v1.txt  official_judge_v1.txt
prompts/public/mmmu/evaluation/: non_official_evaluation_v1.txt
prompts/public/mmmu/generation/: non_official_generation_v1.txt
src/promptmetrics/: __init__.py  logging_utils.py  registry.py  utils.py
src/promptmetrics/benchmarks/: aime.py  base.py  facts.py  gpqa.py  hle.py  mmmu.py
src/promptmetrics/llm_providers/: openrouter.py
src/promptmetrics/scripts/: run_evaluation.py  run_generation.py  run_judging.py
tests/: conftest.py  test_benchmarks_gpqa.py  test_benchmarks_hle.py  test_hle_benchmark.py  test_logging_utils.py  test_openrouter_llm.py  test_openrouter_llm_fallbacks.py  test_real_world_and_performance.py  test_registry.py  test_scripts_evaluation.py  test_scripts_generation.py  test_utils.py
tests/aime/: test_benchmarks_aime.py  test_scripts_evaluation_aime.py  test_scripts_evaluation_aime_errors.py  test_scripts_generation_aime.py  test_scripts_generation_aime_errors.py
tests/facts/: test_benchmarks_facts.py  test_scripts_evaluation_facts.py  test_scripts_generation_facts.py
tests/gpqa/: test_scripts_evaluation_gpqa.py  test_scripts_evaluation_gpqa_errors.py  test_scripts_generation_gpqa.py  test_scripts_generation_gpqa_external_prompt.py
tests/hle/: test_benchmarks_hle.py  test_hle_env_warning.py  test_scripts_evaluation_hle.py  test_scripts_generation_hle.py  test_scripts_generation_hle_errors.py  test_scripts_generation_private_prompt.py
tests/mmmu/: test_benchmarks_mmmu.py  test_mmmu_configs_cache.py  test_registry_mmmu.py  test_scripts_evaluation_mmmu.py  test_scripts_evaluation_mmmu_modality_note.py  test_scripts_generation_mmmu.py
