[project]
name = "promptmetrics"
version = "0.1.0"
description = "A modular toolkit for the rigorous evaluation and metric generation of LLM prompts."
dependencies = [
    "datasets",
    "openai",
    "python-dotenv",
    "tqdm",
    "Pillow",
    "pydantic",
    "httpx",
    "numpy",
]
readme = "README.md"
requires-python = ">= 3.11"

# Defines clean command-line entry points
[project.scripts]
pm-generate = "promptmetrics.scripts.run_generation:main"
pm-evaluate = "promptmetrics.scripts.run_evaluation:main"

# Defines dependencies only needed for development and testing
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.uv]
package = true